Services_Ingress_and_Routes/route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nginx
  name: nginx-route
spec:
  host: nginxXX.apps.dmz-kurs.ars-computer.de
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: nginx-service
    weight: 100
  wildcardPolicy: None
